fix photos display on safari, remove singleton commented code, add parametrize title

--- a/app/assets/stylesheets/components/_photos_frame.scss
+++ b/app/assets/stylesheets/components/_photos_frame.scss
@@ -17,10 +17,10 @@
         align-items: center;
            
             img{
-                height: 20vh;
+                // height: 20vh;
                 width: 20.6vw;
                 object-fit: cover;
-                min-height: 100%;
+                // min-height: 100%;
             }
     }
 }
